src/main/resources/static/cover.css
.btn-secondary,
.btn-secondary:focus {
    color: #333;
    text-shadow: none;
}

.btn-secondary:hover {
    background-color: #25be92 !important;
    color: white;
}

body {
    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
    background-image: linear-gradient(to top, rgba(13, 13, 13, 0.95), rgba(13, 13, 13, 0.95)), url(bg_img.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
}

.cover-container {
    max-width: 42em;
}

h1,h2 {
    color: #25be92;
}

h4 {
    padding-bottom: 20px;
}

#drop-area {
    border: 3px dashed #ccc;
    border-radius: 2px;
    padding: 80px;
    text-align: center;
}

.nav-masthead .nav-link {
    color: rgba(255, 255, 255, .5);
    border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

.nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
}

.bd-placeholder-img {
    font-size: 1.125rem;
    text-anchor: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

@media (min-width: 768px) {
    .bd-placeholder-img-lg {
        font-size: 3.5rem;
    }
}

.b-example-divider {
    height: 3rem;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.b-example-vr {
    flex-shrink: 0;
    width: 1.5rem;
    height: 100vh;
}

.bi {
    vertical-align: -.125em;
    fill: currentColor;
}

.nav-scroller {
    position: relative;
    z-index: 2;
    height: 2.75rem;
    overflow-y: hidden;
}

.nav-scroller .nav {
    display: flex;
    flex-wrap: nowrap;
    padding-bottom: 1rem;
    margin-top: -1px;
    overflow-x: auto;
    text-align: center;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-track {
    background: #fcf6ff;
}

::-webkit-scrollbar-thumb {
    background: #7556f3;
}

::-webkit-scrollbar-thumb:hover {
    background: #cbbeff;
}

